Feat: find the replacements and the immutables as a stream and iterate them in parallel to improve the performance